--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   </head>
 
   <body>
+    <div class="my-style"><a href="https://gemdelle.github.io/fCC-RWD-02-CafeMenu/"></a></div>
+    <div class="fcc-style"><a href="https://gemdelle.github.io/fCC-RWD-02-CafeMenu/original"></a></div>
+    
     <div class="container">
       <div class="menu">
         <header>
