--- a/original.html
+++ b/original.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <div class="my-style"><a href="https://gemdelle.github.io/fCC-RWD-02-CafeMenu/"></a></div>
+    <div class="fcc-style"><a href="https://gemdelle.github.io/fCC-RWD-02-CafeMenu/original"></a></div>
+    
     <div class="menu">
         <header>
             <h1>CAMPER CAFE</h1>
